# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF-reconfigurable-context-windows.md  README.md  flake.nix  fly.toml  justfile  render.yaml  rust-toolchain.toml
.beads/: metadata.json
.do/: deploy.template.yaml
.github/workflows/: ci.yml  codspeed.yml  docs.yml  e2e.yml  homebrew.yml  provider-integration.yml  release.yml
.superset/: config.json
crates/agents/src/: lazy_tools.rs  model.rs  prompt.rs  runner.rs  silent_turn.rs  tool_arg_validator.rs  tool_parsing.rs  tool_registry.rs
crates/auth/src/: credential_store.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: code_index.rs
crates/browser/src/: pool.rs  types.rs
crates/channels/src/: commands.rs  contract.rs  error.rs  lib.rs  plugin.rs  registry.rs
crates/chat/src/: agent_loop.rs  channels.rs  chat_error.rs  compaction.rs  lib.rs  memory_tools.rs  message.rs  models.rs  prompt.rs  run_with_tools.rs  streaming.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  config_commands.rs  doctor_commands.rs  doctor_commands_tests.rs  main.rs  node_commands.rs
crates/code-index/src/: config.rs  discover.rs
crates/common/src/: hooks.rs  http_client.rs  ssrf.rs
crates/config/src/: lib.rs  loader.rs  provider_env.rs  schema.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/cron/src/: heartbeat.rs  lib.rs  parse.rs  schedule.rs  service.rs  store.rs  store_file.rs  store_memory.rs  store_sqlite.rs  types.rs
crates/discord/: Cargo.toml
crates/discord/src/: commands.rs  handler.rs  outbound.rs
crates/discord/src/handler/: implementation.rs  tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  auth_middleware.rs  auth_routes.rs  auth_webauthn.rs  broadcast.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  chat.rs  chat_error.rs  cron.rs  lib.rs  local_llm_setup.rs  logs.rs  mcp_service.rs  methods.rs  metrics_routes.rs  node_exec.rs  nodes.rs  onboarding.rs  pairing.rs  push.rs  server.rs  services.rs  session.rs  state.rs  tls.rs  voice.rs  ws.rs
crates/gateway/tests/: auth_middleware.rs
crates/gateway/ui/: input.css
crates/graphql/tests/: integration.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: auth_middleware.rs  auth_routes.rs  env_routes.rs  graphql_routes.rs  push_routes.rs  request_throttle.rs  server.rs  ssh_routes.rs  tailscale_routes.rs  tools_routes.rs  upload_routes.rs  ws.rs
crates/httpd/tests/: auth_middleware.rs  graphql_chat_binding.rs  heartbeat_cron.rs
crates/matrix/src/: handler.rs
crates/mcp-agent-bridge/src/: lib.rs
crates/mcp/src/: auth.rs  client.rs  lib.rs  manager.rs
crates/memory/: Cargo.toml
crates/memory/src/: chunker.rs  config.rs  contract.rs  embeddings.rs  embeddings_openai.rs  lib.rs  manager.rs  schema.rs  search.rs  store.rs  store_sqlite.rs  tools.rs
crates/metrics/src/: store.rs
crates/msteams/: Cargo.toml
crates/msteams/src/: chunking.rs  outbound.rs  plugin.rs
crates/node-exec-types/src/: lib.rs
crates/node-host/src/: service.rs
crates/nostr/src/: bus.rs
crates/oauth/src/: redirect.rs
crates/onboarding/src/: service.rs
crates/openclaw-import/src/: watcher.rs
crates/projects/src/: detect.rs  store.rs  worktree.rs
crates/protocol/src/: lib.rs  types.rs
crates/provider-setup/: Cargo.toml
crates/provider-setup/src/: config_helpers.rs  custom_providers.rs  key_store.rs  known_providers.rs  lib.rs  oauth.rs  ollama.rs  service.rs
crates/providers/src/: anthropic.rs  async_openai_provider.rs  client.rs  config_helpers.rs  contract.rs  discovered_model.rs  genai_provider.rs  github_copilot.rs  http.rs  kimi_code.rs  lib.rs  model_capabilities.rs  model_catalogs.rs  model_id.rs  ollama.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/providers/tests/: anthropic_integration.rs  fireworks_integration.rs  kimi_code_integration.rs  minimax_integration.rs  moonshot_integration.rs  openai_compat_type_arrays.rs  openai_integration.rs  tool_arg_serialization_integration.rs
crates/qmd/src/: runtime.rs
crates/secret-store/src/: store.rs
crates/service-traits/src/: bundle.rs  error.rs  interfaces.rs  lib.rs  tests.rs
crates/sessions/src/: message.rs  metadata.rs  (+1 more)
crates/slack/: Cargo.toml
crates/slack/src/: commands.rs  outbound.rs  socket.rs
crates/swift-bridge/: Cargo.toml
crates/swift-bridge/src/: callbacks.rs  chat.rs  ffi_auth.rs  ffi_config.rs  ffi_core.rs  ffi_sandbox.rs  ffi_sessions.rs  helpers.rs  lib.rs  state.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: approval.rs  client.rs  contract.rs  cron_tool.rs  exec.rs  lib.rs  policy.rs  sandbox.rs  skill_tools.rs  spawn_agent.rs
crates/tools/src/cron_tool/: tests.rs
crates/tools/src/exec/: tests.rs
crates/tools/src/fs/: context.rs  contract_tests.rs  edit.rs  glob.rs  grep.rs  mod.rs  multi_edit.rs  read.rs  sandbox_bridge.rs  shared.rs  write.rs
crates/tools/src/fs/read/: image.rs  mod.rs  tool.rs
crates/tools/src/sandbox/: docker.rs  file_system.rs  tests.rs
crates/tools/src/sandbox/tests/: apple.rs  core.rs  docker_router.rs  linux.rs  network.rs  platform.rs  restricted_host.rs  wasm.rs
crates/tools/src/skill_tools/: read.rs
crates/web/: Cargo.toml
docs/: security.md
docs/src/: SUMMARY.md  channels.md  configuration-reference.md  configuration.md  docker.md  graphql.md  hooks.md  sandbox.md  scheduling.md  session-branching.md  session-state.md  slack.md  sqlite-migration.md  streaming.md  vault.md  webhooks.md
plans/: 2026-03-28-plan-hermes-gap-roadmap.md  2026-04-13-plan-tool-arg-serialization-regression.md
prompts/: session-2026-04-06-swift-bridge-httpd-ci.md
scripts/: check-file-size.sh  install-linux-build-deps.sh  local-validate.sh  run-provider-e2e-daily.sh  verify-release.sh
website/: index.de.html  index.en.html  index.es.html  index.fr.html  index.it.html  index.ja.html  index.ko.html  index.pt.html  index.ru.html  index.zh.html  releases.json
website/changelog/: index.html
website/scripts/: build-changelog.mjs
(+295 files in other folders)
