[workspace]
members = [
	"crates/agents",
	"crates/auto-reply",
	"crates/browser",
	"crates/canvas",
	"crates/channels",
	"crates/cli",
	"crates/common",
	"crates/config",
	"crates/cron",
	"crates/gateway",
	"crates/media",
	"crates/memory",
	"crates/oauth",
	"crates/onboarding",
	"crates/plugins",
	"crates/protocol",
	"crates/routing",
	"crates/sessions",
	"crates/tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP/WS server
axum = { version = "0.8", features = ["ws"] }
# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow    = "1"
thiserror = "2"
# Logging
opentelemetry         = { version = "0.29" }
opentelemetry-otlp    = { version = "0.29", features = ["tonic"] }
opentelemetry_sdk     = { version = "0.29", features = ["rt-tokio"] }
tracing               = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "json"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
# UUID
uuid = { version = "1", features = ["v4"] }
# Async streams
directories       = "6"
dotenvy           = "0.15"
futures           = "0.3"
serde_yaml        = "0.9"
tokio-stream      = "0.1"
tokio-tungstenite = "0.26"
toml              = "0.8"
# LLM provider crates (optional, behind feature flags)
async-openai = { version = "0.32", features = ["chat-completion"] }
genai        = "0.5"
base64       = "0.22"
open         = "5.3"
sha2         = "0.10"

# Workspace crates
moltis-agents     = { path = "crates/agents", features = ["provider-openai-codex"] }
moltis-oauth      = { path = "crates/oauth" }
moltis-auto-reply = { path = "crates/auto-reply" }
moltis-browser    = { path = "crates/browser" }
moltis-canvas     = { path = "crates/canvas" }
moltis-channels   = { path = "crates/channels" }
moltis-cli        = { path = "crates/cli" }
moltis-common     = { path = "crates/common" }
moltis-config     = { path = "crates/config" }
moltis-cron       = { path = "crates/cron" }
moltis-gateway    = { path = "crates/gateway" }
moltis-media      = { path = "crates/media" }
moltis-memory     = { path = "crates/memory" }
moltis-onboarding = { path = "crates/onboarding" }
moltis-plugins    = { path = "crates/plugins" }
moltis-protocol   = { path = "crates/protocol" }
moltis-routing    = { path = "crates/routing" }
moltis-sessions   = { path = "crates/sessions" }
moltis-tools      = { path = "crates/tools" }
