[package]
edition.workspace = true
name              = "moltis-discord"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
moltis-media    = { workspace = true }
moltis-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serenity        = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true

[dev-dependencies]
image = { workspace = true }
