[package]
edition.workspace = true
name              = "moltis-slack"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
base64          = { workspace = true }
hmac            = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
moltis-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
slack-morphism  = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
