[package]
edition.workspace = true
name              = "moltis-tools"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = "0.1"
moltis-agents = { workspace = true }
moltis-common = { workspace = true }
moltis-cron   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
